opam-version: "1.2"
name:         "timeout"
version:      "1.0"
maintainer:   "Jack Feser <jack.feser@gmail.com>"
authors:      "Jack Feser <jack.feser@gmail.com>"
homepage:     "https://github.com/jfeser/timeout"
bug-reports:  "https://github.com/jfeser/timeout/issues"
license:      "Apache2.0"
dev-repo:     "https://github.com/jfeser/timeout.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
install: [make "install"]
remove: ["ocamlfind" "remove" "timeout"]
depends: [
  "dune"           {build & >= "1.1"}
  "core"           {>= "v0.11" & < "v0.12"}
  "core_extended"  {>= "v0.11" & < "v0.12"}
  "ctypes"         {>= "0.14" & < "0.15"}
  "ctypes-foreign" {>= "0.4" & < "0.5"}
  "yojson"         {>= "1.4" & < "1.5"}
]
