opam-version: "1.2"
name:         "timeout"
version:      "1.0"
maintainer:   "Jack Feser <jack.feser@gmail.com>"
authors:      "Jack Feser <jack.feser@gmail.com>"
homepage:     "https://github.com/jfeser/timeout"
bug-reports:  "https://github.com/jfeser/timeout/issues"
license:      "Apache2.0"
dev-repo:     "https://github.com/jfeser/timeout.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune"           {build & >= "1.1"}
  "core"           {>= "v0.11"}
  "ctypes"         {>= "0.14"}
  "ctypes-foreign" {>= "0.4"}
  "yojson"         {>= "1.4"}
]
