opam-version: "2.0"
name:         "timeout-macos"
synopsis:     "Run a command with time and memory limits"
version:      "1.1"
maintainer:   "Jack Feser <jack.feser@gmail.com>"
authors:      "Jack Feser <jack.feser@gmail.com>"
homepage:     "https://github.com/jfeser/timeout"
bug-reports:  "https://github.com/jfeser/timeout/issues"
license:      "Apache2.0"
dev-repo:     "git+https://github.com/jfeser/timeout.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune"            {build & >= "2.1"}
  "ppx_yojson_conv" {>= "v0.13"}
  "core"            {>= "v0.13"}
  "ctypes"          {>= "0.16"}
  "ctypes-foreign"  {>= "0.4"}
  "yojson"          {>= "1.7"}
]
